2008-04-03  Jaromir Talir <jaromir.talir@nic.cz>

    * new indexes into history tables
	
    * new table for stored filters
	
    * release 1.8.1

2008-03-25  Jaromir Talir <jaromir.talir@nic.cz>

    * upgrade deleteCandidate state update procedure for contacts/nssets
	
2008-03-12  Jaromir Talir <jaromir.talir@nic.cz>

    * few indexes added

2008-03-12  Ales Dolezal <ales.dolezal@nic.cz>

    * configuration process enhancement

    * adding sql comments

2008-02-09  Jaromir Talir <jaromir.talir@nic.cz> 

    * release 1.8.0
    
    * adding action_elements table
    
    * setting of sequences for tables registrar,registraracl,
      zone,registrarinvoice

2008-02-01  Jaromír Talíř <jaromir.talir@nic.cz>

    * new directory with distinct upgrade sql files for every change

    * new table with top level domains

    * refactoring and fixing state.sql
        - states setting parameters moved to parameters table
        - exdate states dependant on serverRenewProhibited
        - proper handling of shared linked state updates (locking)

    * new parameter table with system configuration

2008-01-19	Jaromír Talíř <jaromir.talir@nic.cz>

	* autotooling package with a lot of structural changes

2007-05-24	Jaromír Talíř <jaromir.talir@nic.cz>

	* ccreg.sql (domain_contact_map)
	Adding role of contact - 1=admin, 2=temp and 

	* history.sql (domain_contact_map_history)
	Adding role of contact - 1=admin, 2=temp and 

	* reason.sql
	Fixing typo

	* ChangeLog
	Adding this changelog

	* UPGRADE
	Updating alter script